--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.0.6",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
