--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # Url para enviar el archivo .csv
-VITE_URL=http://localhost:8081
+# VITE_URL=http://localhost:8081
+VITE_URL=http://100.24.74.245:8081
