fix: generalidades de diseño

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "sass": "^1.57.1",
     "semantic-ui-react": "^2.1.4",
     "sockjs": "^0.3.24",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "sweetalert2": "^11.7.3",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^18.11.13",
