Subo avances administrador validaciones

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 # Url para enviar el archivo .csv
 VITE_URL=http://localhost:8081
+VITE_URL2=http://localhost:8082
+
 # VITE_URL=http://54.162.75.202:8081/
