--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_URL=http://localhost:8081
-# VITE_URL2=http://localhost:8082
+VITE_URL2=http://localhost:8082
 
 # VITE_URL=http://54.162.75.202:8081
 # VITE_URL2=http://54.162.75.202:8082
