Agregando nuevos ambientes

--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
+## AMBIENTE LOCAL:
 VITE_URL=http://localhost:8081
 VITE_URL2=http://localhost:8082
 
-# VITE_URL=http://54.162.75.202:8081
-# VITE_URL2=http://54.162.75.202:8082
+## AMBIENTE DEV:
+#VITE_URL=http://54.162.75.202:8081
+#VITE_URL2=http://54.162.75.202:8082
 
+## AMBIENTE QA:
+#VITE_URL=http://54.227.6.159:8081
+#VITE_URL2=http://54.227.6.159:8082
