feat: :art: login conexion back

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 ## AMBIENTE LOCAL:
 VITE_URL=http://localhost:8081
 VITE_URL2=http://localhost:8082
+VITE_URLAUTH=http://localhost:8080
+
 
 ## AMBIENTE DEV:
 #VITE_URL=http://54.162.75.202:8081
