--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ## AMBIENTE LOCAL:
 VITE_URL=http://localhost:8081
 VITE_URL2=http://localhost:8082
-VITE_URLAUTH=http://localhost:8080
+VITE_URLAUTH=http://54.227.6.159:8080
 
 
 ## AMBIENTE DEV:
