--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "buffer": "^6.0.3",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "move-file": "^3.0.0",
     "node-sass": "^8.0.0",
